--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.1",
     "@ngneat/until-destroy": "^10.0.0",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "rxjs": "~7.8.0",
     "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
@@ -40,5 +40,12 @@
     "jest": "^29.7.0",
     "jest-preset-angular": "^14.0.3",
     "typescript": "~5.3.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "webpack-dev-middleware@<=5.3.3": ">=5.3.4",
+      "webpack-dev-middleware@>=6.0.0 <6.1.2": ">=6.1.2",
+      "follow-redirects@<=1.15.5": ">=1.15.6"
+    }
   }
 }
